--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,7 +28,8 @@
         app:layout_constraintBottom_toBottomOf="@+id/rewards"
         app:layout_constraintEnd_toStartOf="@+id/rewards"
         app:layout_constraintTop_toTopOf="@+id/rewards"
-        app:srcCompat="@drawable/ic_cart_black" />
+        app:srcCompat="@drawable/ic_cart_black"
+        tools:ignore="VectorDrawableCompat" />
 
     <ImageView
         android:id="@+id/rewards"
@@ -38,8 +39,9 @@
         app:layout_constraintBottom_toBottomOf="@+id/cutn"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@+id/cutn"
-        app:srcCompat="@drawable/ic_account_settings"
-        android:layout_marginRight="16dp" />
+        app:srcCompat="@drawable/ic_baseline_card_giftcard_24"
+        android:layout_marginRight="16dp"
+        tools:ignore="VectorDrawableCompat" />
 
     <EditText
         android:id="@+id/searchForProduct"
@@ -50,6 +52,30 @@
         android:inputType="text"
         app:layout_constraintTop_toTopOf="parent"
         tools:layout_editor_absoluteX="4dp" />
+
+    <ImageView
+        android:id="@+id/photo"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        app:layout_constraintBottom_toBottomOf="@+id/microphone"
+        app:layout_constraintEnd_toStartOf="@+id/microphone"
+        app:layout_constraintTop_toTopOf="@+id/microphone"
+        app:srcCompat="@drawable/ic_baseline_add_a_photo_24"
+        tools:ignore="VectorDrawableCompat" />
+
+    <ImageView
+        android:id="@+id/microphone"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="16dp"
+        app:layout_constraintBottom_toBottomOf="@+id/searchForProduct"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/searchForProduct"
+        app:srcCompat="@drawable/ic_baseline_mic_24"
+        android:layout_marginRight="16dp"
+        tools:ignore="VectorDrawableCompat" />
 
     <TextView
         android:id="@+id/category"
