--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,115 +6,11 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <TextView
-        android:id="@+id/cutn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="3dp"
-        android:layout_marginLeft="3dp"
-        android:layout_marginTop="4dp"
-        android:text="CUTN"
-        android:textColor="@android:color/background_dark"
-        android:textSize="50sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <ImageView
-        android:id="@+id/cart"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
-        app:layout_constraintBottom_toBottomOf="@+id/rewards"
-        app:layout_constraintEnd_toStartOf="@+id/rewards"
-        app:layout_constraintTop_toTopOf="@+id/rewards"
-        app:srcCompat="@drawable/ic_cart_black"
-        tools:ignore="VectorDrawableCompat" />
-
-    <ImageView
-        android:id="@+id/rewards"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="16dp"
-        android:layout_marginRight="16dp"
-        app:layout_constraintBottom_toBottomOf="@+id/cutn"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/cutn"
-        app:srcCompat="@drawable/ic_baseline_card_giftcard_24"
-        tools:ignore="VectorDrawableCompat" />
-
-    <EditText
-        android:id="@+id/searchForProduct"
+    <fragment
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="108dp"
-        android:hint="Search For Product"
-        android:inputType="text"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:layout_editor_absoluteX="4dp" />
-
-    <ImageView
-        android:id="@+id/photo"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
-        app:layout_constraintBottom_toBottomOf="@+id/microphone"
-        app:layout_constraintEnd_toStartOf="@+id/microphone"
-        app:layout_constraintTop_toTopOf="@+id/microphone"
-        app:srcCompat="@drawable/ic_baseline_add_a_photo_24"
-        tools:ignore="VectorDrawableCompat" />
-
-    <ImageView
-        android:id="@+id/microphone"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="16dp"
-        android:layout_marginRight="16dp"
-        app:layout_constraintBottom_toBottomOf="@+id/searchForProduct"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/searchForProduct"
-        app:srcCompat="@drawable/ic_baseline_mic_24"
-        tools:ignore="VectorDrawableCompat" />
-
-    <TextView
-        android:id="@+id/category"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginTop="230dp"
-        android:text="Category"
-        android:textColor="@android:color/background_dark"
-        android:textSize="20sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/seeMoreCategory"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:fontFamily="sans-serif"
-        android:onClick="seeMore"
-        android:text="See more"
-        android:textColor="@android:color/background_dark"
-        android:textSize="10sp"
-        app:layout_constraintBottom_toBottomOf="@+id/category"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/category" />
-
-    <TextView
-        android:id="@+id/popularItems"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginTop="460dp"
-        android:text="Popular Items"
-        android:textColor="@android:color/background_dark"
-        android:textSize="20sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
+        android:layout_height="match_parent"
+        android:id="@+id/homepageFragment"
+        android:name="sg.edu.smu.cs461.cutn_mobileapp.fragment_homepage"
+        tools:layout="@layout/fragment_homepage"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
