--- a/app/src/main/res/layout/activity_rewards.xml
+++ b/app/src/main/res/layout/activity_rewards.xml
@@ -11,23 +11,50 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
+
+    <Button
+        android:layout_width="60dp"
+        android:layout_height="wrap_content"
+        android:background="@drawable/ic_baseline_arrow_back_24"
+        android:layout_margin="10dp"
+    />
+
+    <TextView
+        android:id="@+id/rewardsLabel"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_centerInParent="true"
+        android:layout_gravity="top|center_horizontal"
+        android:layout_marginTop="15dp"
+        android:fontFamily="sans-serif-black"
+        android:text="REWARDS"
+        android:textAlignment="center"
+        android:textSize="30dp" />
+
+
     <com.mikhaellopez.circularprogressbar.CircularProgressBar
         android:id="@+id/stepprogressbar"
         android:layout_width="200dp"
         android:layout_height="200dp"
+        android:layout_marginTop="100dp"
+        android:layout_alignParentTop="true"
         android:layout_centerInParent="true"
+        android:layout_below="@id/rewardsLabel"
         app:cpb_background_progressbar_color="#8DDDB3"
         app:cpb_background_progressbar_width="20dp"
         app:cpb_progress_direction="to_right"
+        app:cpb_progress_max="20"
         app:cpb_progressbar_color="#3f51b5"
         app:cpb_progressbar_width="15dp"
-        app:cpb_progress_max="20"
         app:cpb_round_border="true" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/currentStepsView"
+        android:layout_marginTop="170dp"
+        android:layout_alignParentTop="true"
         android:layout_centerInParent="true"
         android:text="0"
         android:textColor="@android:color/black"
@@ -44,10 +71,28 @@
         android:textSize="14sp"/>
 
     <TextView
-        android:id="@+id/congratsMsg"
+        android:id="@+id/instructions"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/stepprogressbar"
+        android:layout_centerInParent="true"
+        android:layout_marginStart="20dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="50dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginBottom="20dp"
+        android:fontFamily="sans-serif-black"
+        android:gravity="center"
+        android:includeFontPadding="false"
+        android:text="Walk 10000 steps to earn a voucher!"
+        android:textSize="22sp" />
+
+    <TextView
+        android:id="@+id/congratsMsg"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/instructions"
         android:layout_centerInParent="true"
         android:layout_marginStart="20dp"
         android:layout_marginLeft="20dp"
@@ -86,8 +131,38 @@
         android:layout_margin="5dp"
         android:fontFamily="sans-serif-black"
         android:gravity="center"
+        android:textColor="#CC4545"
         android:text=""
         android:textSize="20sp"
+        android:visibility="invisible"/>
+
+    <Button
+        android:id="@+id/copyBtn"
+        android:layout_width="20dp"
+        android:layout_height="20dp"
+        android:layout_below="@+id/discountHeader"
+        android:layout_toRightOf="@id/voucherCode"
+        android:background="@drawable/ic_baseline_content_copy_24"
+        android:visibility="invisible" />
+
+    <Button
+        android:id="@+id/resetBtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/voucherCode"
+        android:layout_centerInParent="true"
+        android:layout_marginStart="5dp"
+        android:layout_marginLeft="5dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginEnd="5dp"
+        android:layout_marginRight="5dp"
+        android:layout_marginBottom="5dp"
+        android:fontFamily="monospace"
+        android:gravity="center"
+        android:text="Reset"
+        android:textSize="20sp"
+        app:backgroundTint="#CC4545"
+        app:iconTint="#A66161"
         android:visibility="invisible"/>
 
 </RelativeLayout>
