--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -77,14 +77,14 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/categoryFragment"
-        android:name="sg.edu.smu.cs461.cutn_mobileapp.fragment_category"
+        android:name="sg.edu.smu.cs461.cutn_mobileapp.categoryFragment"
         tools:layout="@layout/fragment_category"/>
 
     <fragment
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/popularItemsFragment"
-        android:name="sg.edu.smu.cs461.cutn_mobileapp.fragment_popularitems"
+        android:name="sg.edu.smu.cs461.cutn_mobileapp.popularitemsFragment"
         tools:layout="@layout/fragment_popularitems"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
