--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,3 @@
-</androidx.constraintlayout.widget.ConstraintLayout>
-
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -68,12 +66,12 @@
         app:layout_constraintBottom_toBottomOf="@+id/searchForProduct"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@+id/searchForProduct"/>
-    <fragment
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/categoryFragment"
-        android:name="sg.edu.smu.cs461.cutn_mobileapp.categoryFragment"
-        tools:layout="@layout/fragment_category"/>
+<!--    <fragment-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="match_parent"-->
+<!--        android:id="@+id/categoryFragment"-->
+<!--        android:name="sg.edu.smu.cs461.cutn_mobileapp.categoryFragment"-->
+<!--        tools:layout="@layout/fragment_category"/>-->
         <Button
         android:id="@+id/button"
         android:layout_width="wrap_content"
