--- a/app/src/main/res/layout/popular_items_layout.xml
+++ b/app/src/main/res/layout/popular_items_layout.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="120dp"
+    android:layout_width="190dp"
     android:layout_height="250dp"
     android:layout_marginRight="12dp">
 
@@ -23,16 +23,25 @@
             android:layout_below="@id/imageView"
             android:text="Product Name"
             android:textColor="@color/black"
-            android:textSize="18sp"
+            android:textSize="15sp"
             android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/description"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Description"
+            android:layout_below="@id/productName"
+            android:textColor="@color/black"/>
 
         <TextView
             android:id="@+id/price"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Price"
-            android:layout_below="@id/productName"
-            android:textColor="@color/black"/>
+            android:layout_below="@id/description"
+            android:textColor="@color/black"
+            android:textSize="13sp"/>
 
         <TextView
             android:id="@+id/quantity"
@@ -40,15 +49,8 @@
             android:layout_height="wrap_content"
             android:text="quantity"
             android:layout_below="@id/price"
-            android:textColor="@color/black"/>
-
-        <TextView
-            android:id="@+id/description"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Description"
-            android:layout_below="@id/quantity"
-            android:textColor="@color/black"/>
+            android:textColor="@color/black"
+            android:textSize="11sp"/>
 
     </RelativeLayout>
 
