--- a/app/src/main/res/layout/activity_rewards.xml
+++ b/app/src/main/res/layout/activity_rewards.xml
@@ -27,55 +27,18 @@
         android:layout_alignParentTop="true"
         android:layout_centerInParent="true"
         android:layout_gravity="top|center_horizontal"
-        android:layout_marginTop="15dp"
-        android:fontFamily="sans-serif-black"
-        android:text="REWARDS"
+        android:layout_marginTop="20dp"
+        android:fontFamily="sans-serif-thin"
+        android:text="Rewards"
         android:textAlignment="center"
-        android:textSize="30dp" />
-
-
-    <com.mikhaellopez.circularprogressbar.CircularProgressBar
-        android:id="@+id/stepprogressbar"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
-        android:layout_marginTop="100dp"
-        android:layout_alignParentTop="true"
-        android:layout_centerInParent="true"
-        android:layout_below="@id/rewardsLabel"
-        app:cpb_background_progressbar_color="#8DDDB3"
-        app:cpb_background_progressbar_width="20dp"
-        app:cpb_progress_direction="to_right"
-        app:cpb_progress_max="20"
-        app:cpb_progressbar_color="#3f51b5"
-        app:cpb_progressbar_width="15dp"
-        app:cpb_round_border="true" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/currentStepsView"
-        android:layout_marginTop="170dp"
-        android:layout_alignParentTop="true"
-        android:layout_centerInParent="true"
-        android:text="0"
-        android:textColor="@android:color/black"
-        android:textSize="40sp"/>
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/stepsMax"
-        android:layout_below="@+id/currentStepsView"
-        android:layout_centerInParent="true"
-        android:text="/20"
-        android:textColor="@android:color/black"
-        android:textSize="14sp"/>
+        android:textColor="#000000"
+        android:textSize="24sp" />
 
     <TextView
         android:id="@+id/instructions"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/stepprogressbar"
+        android:layout_below="@+id/rewardsLabel"
         android:layout_centerInParent="true"
         android:layout_marginStart="20dp"
         android:layout_marginLeft="20dp"
@@ -83,17 +46,72 @@
         android:layout_marginEnd="20dp"
         android:layout_marginRight="20dp"
         android:layout_marginBottom="20dp"
-        android:fontFamily="sans-serif-black"
+        android:fontFamily="@font/alegreya_sans_sc_light"
         android:gravity="center"
         android:includeFontPadding="false"
         android:text="Walk 10000 steps to earn a voucher!"
+        android:textColor="#000000"
         android:textSize="22sp" />
+
+
+    <com.mikhaellopez.circularprogressbar.CircularProgressBar
+        android:id="@+id/stepprogressbar"
+        android:layout_width="250dp"
+        android:layout_height="250dp"
+        android:layout_marginTop="150dp"
+        android:layout_alignParentTop="true"
+        android:layout_centerInParent="true"
+        android:layout_below="@id/instructions"
+        app:cpb_background_progressbar_color="#d6d6d4"
+        app:cpb_background_progressbar_width="20dp"
+        app:cpb_progress_direction="to_right"
+        app:cpb_progress_max="20"
+        app:cpb_progressbar_color="#5cb0cc"
+        app:cpb_progressbar_width="15dp"
+        app:cpb_round_border="true" />
+
+    <TextView
+        android:id="@+id/currentStepsLabel"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_centerInParent="true"
+        android:layout_marginTop="200dp"
+        android:fontFamily="@font/alegreya_sans_sc_light"
+        android:text="Current Steps"
+        android:textColor="@android:color/black"
+        android:textSize="20sp" />
+
+    <TextView
+        android:id="@+id/currentStepsView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_centerInParent="true"
+        android:layout_marginTop="230dp"
+        android:text="2748"
+        android:textColor="#298EDF"
+        android:textSize="60sp" />
+
+    <TextView
+        android:id="@+id/stepsMax"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/currentStepsView"
+        android:layout_centerInParent="true"
+        android:layout_marginTop="15dp"
+        android:fontFamily="@font/alegreya_sans_sc_light"
+        android:text="Goal: 20"
+        android:textColor="@android:color/black"
+        android:textSize="18sp" />
+
+
 
     <TextView
         android:id="@+id/congratsMsg"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/instructions"
+        android:layout_below="@+id/stepprogressbar"
         android:layout_centerInParent="true"
         android:layout_marginStart="20dp"
         android:layout_marginLeft="20dp"
@@ -103,7 +121,7 @@
         android:layout_marginBottom="20dp"
         android:fontFamily="monospace"
         android:gravity="center"
-        android:text="Congratulations! You have earned a 10% store-wide voucher code!"
+        android:text="Congratulations! You have earned a 10% store-wide voucher code! Please use this at checkout"
         android:visibility="invisible"/>
 
     <TextView
@@ -117,9 +135,10 @@
         android:layout_marginTop="30dp"
         android:layout_marginEnd="30dp"
         android:layout_marginRight="30dp"
-        android:fontFamily="sans-serif-black"
+        android:fontFamily="@font/alegreya_sans_sc_light"
         android:gravity="center"
         android:text="DISCOUNT CODE:"
+        android:textColor="#000000"
         android:textSize="20sp"
         android:visibility="invisible"/>
 
@@ -129,13 +148,18 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/discountHeader"
         android:layout_centerInParent="true"
-        android:layout_margin="5dp"
-        android:fontFamily="sans-serif-black"
+        android:layout_marginStart="5dp"
+        android:layout_marginLeft="5dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginEnd="5dp"
+        android:layout_marginRight="5dp"
+        android:layout_marginBottom="5dp"
+        android:fontFamily="@font/aldrich"
         android:gravity="center"
-        android:textColor="#CC4545"
-        android:text=""
+        android:text="asd"
+        android:textColor="#298EDF"
         android:textSize="50sp"
-        android:visibility="invisible"/>
+        android:visibility="invisible" />
 
     <Button
         android:id="@+id/copyBtn"
@@ -161,9 +185,10 @@
         android:layout_marginBottom="5dp"
         android:fontFamily="monospace"
         android:gravity="center"
-        android:text="Reset"
-        android:textSize="20sp"
-        app:backgroundTint="#CC4545"
+        android:text="Play Again!"
+        android:textSize="15sp"
+        android:textColor="#000000"
+        app:backgroundTint="#8DDDB3"
         app:iconTint="#A66161"
         android:visibility="invisible"/>
 
