Finish UI for individual product

--- a/app/src/main/res/values/preloaded_fonts.xml
+++ b/app/src/main/res/values/preloaded_fonts.xml
@@ -7,5 +7,6 @@
         <item>@font/alegreya_sans_sc_light</item>
         <item>@font/alegreya_sc_bold</item>
         <item>@font/asap_bold</item>
+        <item>@font/baloo</item>
     </array>
 </resources>
