--- a/app/src/main/res/layout/activity_rewards.xml
+++ b/app/src/main/res/layout/activity_rewards.xml
@@ -14,11 +14,13 @@
 
     <Button
         android:id="@+id/goBack"
-        android:layout_width="60dp"
-        android:layout_height="wrap_content"
-        android:background="@drawable/ic_baseline_arrow_back_24"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:background="@drawable/ic_baseline_arrow_back_ios_24"
         android:layout_margin="10dp"
-    />
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        />
 
     <TextView
         android:id="@+id/rewardsLabel"
