--- a/app/src/main/res/layout/fragment_popularitems.xml
+++ b/app/src/main/res/layout/fragment_popularitems.xml
@@ -37,7 +37,7 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/recyclerView"
+            android:id="@+id/recyclerViewPopularItem"
             android:padding="4dp"
             android:clipToPadding="false"
             android:layout_width="wrap_content"
