--- a/app/src/main/res/layout/popular_items_layout.xml
+++ b/app/src/main/res/layout/popular_items_layout.xml
@@ -11,7 +11,7 @@
         android:layout_margin="4dp">
 
         <ImageView
-            android:id="@+id/imageView"
+            android:id="@+id/imageViewPopularItem"
             android:layout_width="70dp"
             android:layout_height="70dp"
             android:src="@drawable/ic_baseline_fastfood_24" />
@@ -20,7 +20,7 @@
             android:id="@+id/productName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/imageView"
+            android:layout_below="@id/imageViewPopularItem"
             android:text="Product Name"
             android:textColor="@color/black"
             android:textSize="15sp"
