--- a/app/src/main/res/layout/category_layout.xml
+++ b/app/src/main/res/layout/category_layout.xml
@@ -2,7 +2,8 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="124dp"
     android:layout_height="200dp"
-    android:layout_marginRight="12dp">
+    android:layout_marginRight="12dp"
+    android:id="@+id/cardView">
 
     <RelativeLayout
         android:layout_width="match_parent"
