--- a/app/src/main/res/layout/fragment_category.xml
+++ b/app/src/main/res/layout/fragment_category.xml
@@ -19,6 +19,7 @@
             android:layout_marginLeft="8dp"
             android:layout_marginTop="180dp"
             android:text="Category"
+            android:textStyle="bold"
             android:textColor="@android:color/background_dark"
             android:textSize="20sp"
             app:layout_constraintStart_toStartOf="parent"
