--- a/app/src/main/res/layout/fragment_popularitems.xml
+++ b/app/src/main/res/layout/fragment_popularitems.xml
@@ -31,6 +31,7 @@
             android:layout_marginLeft="8dp"
             android:layout_marginTop="460dp"
             android:text="Popular Items"
+            android:textStyle="bold"
             android:textColor="@android:color/background_dark"
             android:textSize="20sp"
             app:layout_constraintStart_toStartOf="parent"
