--- a/app/src/main/res/layout/category_layout.xml
+++ b/app/src/main/res/layout/category_layout.xml
@@ -15,7 +15,7 @@
             android:id="@+id/imageViewCategory"
             android:layout_width="100dp"
             android:layout_height="100dp"
-            android:src="@drawable/fruits2" />
+            android:src="@drawable/vg" />
 
         <TextView
             android:id="@+id/categoryName"
